# my_project

file_agent/: Cargo.toml
file_agent/src/: lib.rs
file_agent/src/config/: mod.rs
file_agent/src/error/: mod.rs
file_agent/src/filesystem/: mod.rs  operations.rs  utils.rs
file_agent/src/network/: client.rs  handlers.rs  mod.rs  proxy.rs
file_agent/src/system/: info.rs
file_agent/src/utils/: mod.rs
go_server/: data.json  go.mod  go.sum  main.go
go_server/app/: debug.go  frame_buffer.go  httpFileHandlers.go  httpHandler.go  interface.go  struct.go  userCreation.go  util.go  videoDecoder.go  websocketClientCreation.go  websocketRelay.go
go_server/app/certs/: cert.pem
go_server/certs/: key.pem
go_server/gbl/: gbl.go
go_server/jsonparser/: json.go
go_server/public/: index.html
go_server/public/scripts/: chatClient.js  detailsTab.js  fileManagerTab.js  httpClient.js  installedApplicationTab.js  keyboard.js  kvm.js  main.js  monitor.js  mouse.js  tabNavigation.js  top.js  videoDecoder.js  websocket.js
go_server/public/styles/: chat.css  style.css  tool.css  topbar.css
go_server/util/: util.go
go_server/views/: admin.html  remote.html
screen_capture_agent/: Cargo.toml  build.rs  config.txt
screen_capture_agent/libs/scrap/: .gitignore  Cargo.toml  build.rs
screen_capture_agent/libs/scrap/src/: lib.rs
screen_capture_agent/libs/scrap/src/common/: codec.rs  convert.rs  dxgi.rs  mod.rs  video.rs  vpxcodec.rs
screen_capture_agent/libs/scrap/src/dxgi/: gdi.rs  mod.rs
screen_capture_agent/src/: main.rs  qos.rs  video_encoder.rs
screen_capture_agent/src/codec/: mod.rs  yuv_converter.rs
screen_capture_agent/src/network/: blocking_capture_thread.rs  client_state.rs  config.rs  input_processor.rs  keyboard.rs  message_handler.rs  mod.rs  mouse.rs  protocol.rs  websocket.rs
screen_capture_agent/src/platform/: windows.rs  windows_utils.c
