[package]
name = "scrap"
description = "Windows screen capture and VPX encoding utilities"
version = "0.5.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
bytes = "1.6"
lazy_static = "1.4"
log = "0.4"
num_cpus = "1.15"
once_cell = "1.19"

[dependencies.winapi]
version = "0.3"
features = [
    "dxgi",
    "dxgi1_2",
    "dxgi1_5",
    "d3d11",
    "winuser",
    "winerror",
    "errhandlingapi",
    "libloaderapi",
]

[build-dependencies]
target_build_utils = "0.3"
bindgen = "0.65"
pkg-config = "0.3"

